fix* CheckableSelect medium size icon indicator (#407)
fix* Checkable select no options message
feat* Truncate SelectField single value

--- a/packages/ui/src/Select/CheckableSelectField.module.scss
+++ b/packages/ui/src/Select/CheckableSelectField.module.scss
@@ -79,3 +79,10 @@
     border-color: c.$colorSuccessLight;
   }
 }
+
+.noOptionsMessage {
+  display: inline-flex;
+  min-height: c.$grid * 10;
+  line-height: c.$grid * 10;
+  color: c.$colorNeutralLight;
+}
